Add 'Connect to Strava' button
This uses Auth0 (to be documented in a moment) to actually authenticate via Strava. It's all just in JS for now, sloppy and untested.

I'll work on moving it to web assembly (Rust) eventually and test it then.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Heart Rate Drift Calculator</title>
 		<link data-trunk rel="rust" data-target-name="heart_rate_drift_calculator" />
+		<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 		<script data-trunk src="test.js"></script>
 		<style>
 		#drop-area {
@@ -17,6 +18,9 @@
 		</style>
 	</head>
 	<body>
+		<h2>Heart Rate Drift Calculator</h2>
+		<button id="btn-login" onclick="login()">Connect To Strava</button>
+
 		<div id="drop-area">
 			Drag and drop a JSON file here
 		</div>
