Update README and index.html with directions
This is going to become a web app, hooray, and I needed to get the docs updated.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
 	</head>
 	<body>
 		<h2>Heart Rate Drift Calculator</h2>
+		<p>This is simple calculator meant to be used with a Stava download for calculating your Heart Rate Drift, also known as heart rate decoupling. This is a pretty simple calculation, but is only available with Training Peaks premium edition. This had been available on a free website, but I can no longer find it. So I wrote my own.</p>
+
+		<h2>What is the Heart Rate Drift Test</h2>
+		<p>The Heart Rate Drift test is meant to determine where, approximately, your "Zone 2" pace is.  It does this by comparing your average HR from the first half of the effort to the second half. Your heart rate will naturally be higher during the second half of the effort, but if it is going up too much you're not at the top of your aerobic zone.</p>
+
+		<p>The directions to running the test are <a href="https://uphillathlete.com/aerobic-training/heart-rate-drift/">here</a>. This is the short version:</p>
+		<p>Run for at least 75 minutes, wearing a HR monitor. 15 minute warm up to get to your predetermined "steady" HR. This should be an easy pace HR. You should not be concerned that you won't complete the run. The last 60 minutes are where the drift is calculated. This calculator will do this automatically.</p>
+
+		<p>Calculate the difference in average HR from the first 30 minutes (after warm up) to the second 30 minutes. If the second 30 minutes has an average HR of more than 5% higher than your first 30 minutes, then you were running too fast to determine your Aerobic Threshold heart-rate (V1).</p>
+
+		<p>If the difference is less than 3.5% higher then you were probably too slow. Finding the real spot is tricky. If you're in the 3.5-5% range then your AeT (a.ka.the top of Zone 2) is right around your HR at the beginning of the test. Now that you have that you can see if your pace over time improves at that HR. if it does you are improving your Aerobic fitness.</p>
+
+		<h2>The App</h2>
+		<p>Use this app by connecting to your Strava account</p>
+
 		<button id="btn-login" onclick="login()">Connect To Strava</button>
 
 		<div id="drop-area">
