Testing trying Auth0 with JS
This isn't working, it's mostly debugging info, but I need a commit point before I introduce netlify

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 		<p>Use this app by connecting to your Strava account</p>
 
 		<button id="btn-login" onclick="login()">Connect To Strava</button>
+		<br/>
+		<button id="btn-retrieve" onclick="retrieveJSON()">Get Data</button>
 
 		<div id="drop-area">
 			Drag and drop a JSON file here
